# chat_rs

./: Cargo.toml  Dockerfile  docker-compose.yaml  rustfmt.toml
crates/chat_client/: Cargo.toml
crates/chat_client/src/: main.rs
crates/chat_client/src/application/: mod.rs
crates/chat_core/: Cargo.toml
crates/chat_core/src/: constants.rs  protocol.rs
crates/chat_server/: Cargo.toml
crates/chat_server/src/: main.rs
crates/chat_server/src/application/: mod.rs  server.rs  session.rs  user.rs
crates/chat_server/src/application/handles/: admin.rs  auth.rs  message.rs  mod.rs
