[package]
name = "chat_server"
version = "0.1.0-dev"
edition = "2021"
description = "The server for the chat application"
authors = ["Konstantin Opora <konstantinopora@gmail.com>"]
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
chat_core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11.*", features = ["v4"] }
chrono = { workspace = true }
